update api. api list movie & get trailer worked! (-) google sign in and 1 more api

--- a/client/resources/css/style.css
+++ b/client/resources/css/style.css
@@ -1,4 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
+* {
+    font-family: 'Lato', sans-serif;
+    letter-spacing: 1px;
+}
+
+html, body {
+    height: 100%;
+}
 
 body {
     background-image: linear-gradient(#0000007c, #0000007c), url('./img/background-min.jpg');
@@ -11,10 +20,14 @@ body {
 
 .my-custom-scrollbar {
     position: relative;
-    height: 400px;
+    height: 430px;
     overflow: auto;
 }
 
 .table-wrapper-scroll-y {
     display: block;
+}
+
+#search-title{
+    letter-spacing: 0;
 }
