--- a/client/resources/css/style.css
+++ b/client/resources/css/style.css
@@ -31,3 +31,13 @@ body {
 #search-title{
     letter-spacing: 0;
 }
+
+#btn-login:after {
+    content: " ";
+    display: block;
+    background-color: #8d8d8d;
+    height: 1px;
+    width: 75%;
+    margin: 10px auto;
+    
+}
